<resources>
    <string name="app_name">Roc Droid</string>

    <string name="receiver">Receiver</string>
    <string name="receiver_expl"><![CDATA[Start a sender on the remove device. Use this device IP (<tt>%s</tt>) as remote. Use default ports, 10001 for source, 10002 for repair, and start the receiver.]]></string>
    <string name="start_receiver">Start receiver</string>
    <string name="stop_receiver">Stop receiver</string>

    <string name="sender">Sender</string>
    <string name="sender_expl">Start a receiver on the remote device, with ports 10001 as source, 10002 as repair. Put the remote device IP below and start the sender.</string>
    <string name="receiver_ip">Receiver IP</string>
    <string name="default_receiver_ip">192.168.0.1</string>
    <string name="start_sender">Start sender</string>
    <string name="stop_sender">Stop sender</string>
    <string name="invalid_ip_title">Invalid IP address</string>
    <string name="invalid_ip_message">The receiver IP address looks invalid.</string>
    <string name="allow_mic_title">Mic permission</string>
    <string name="allow_mic_message">The app needs permission to record audio from your phone mic.</string>
    <string name="allow_mic_ok_message">Thanks! The sender will now start.</string>

    <string name="ok">OK</string>

    <string name="notification_channel_name">Sender and Receiver foreground service</string>
    <string name="notification_receiver_running">Receiver running</string>
    <string name="notification_sender_running">Sender running</string>
    <string name="notification_sender_and_receiver_running">Sender and Receiver running</string>
    <string name="notification_sender_and_receiver_not_running">Neither Sender or Receiver running</string>
    <string name="notification_title">Roc State</string>
    <string name="notification_stop_sender_action">Stop Sender</string>
    <string name="notification_stop_receiver_action">Stop Receiver</string>
    <string name="usePlaybackCapture"><![CDATA[Capture sound of other apps.\nDoes not work with Spotify, requires >= Android 10]]></string>

    <string name="receiver_start_remote_sender">1. Start sender on the remote device</string>
    <string name="receiver_use_IP">2. Use one of IP addresses of this device as the remote on the sender</string>
    <string name="receiver_start_receiver">5. Start receiver on this device</string>

    <string name="sender_start_remote_receiver">1. Start receiver on the remote device</string>
    <string name="sender_put_IP_address">4. Put IP address of the remote receiver device below</string>
    <string name="sender_choose_audio_source">5. Choose source to capture audio from</string>
    <string name="sender_audio_source_current_apps">Currently playing apps</string>
    <string name="sender_audio_source_microphone">Microphone</string>
    <string name="sender_start_sender">6. Start sender on this device</string>
    <string name="dialog_choose_audio_source">Source to capture audio from</string>

    <string name="receiver_sender_port_for_source">%s. Use this port for source stream</string>
    <string name="receiver_sender_port_for_repair">%s. Use this port for repair stream</string>
    <string name="app_about">About</string>
    <string name="about_source_code">Source Code</string>
    <string name="about_bug_tracker">Bug Tracker</string>
    <string name="about_contributors">Contributors</string>
    <string name="app_license">Mozilla Public License 2.0</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="url_repo">https://github.com/roc-streaming/roc-droid</string>
    <string name="url_bugs">https://github.com/roc-streaming/roc-droid/issues</string>
    <string name="url_contributors">https://github.com/roc-streaming/roc-droid/graphs/contributors</string>
    <string name="uri_license">https://github.com/roc-streaming/roc-droid/blob/main/LICENSE</string>
</resources>
