<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.SenderFragment">

    <ScrollView
        android:id="@+id/senderSettings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fadeScrollbars="false"
        android:paddingBottom="@dimen/padding"
        app:layout_constraintBottom_toTopOf="@+id/startSenderButton"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/startRemoteReceiver"
                style="@style/textViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sender_start_remote_receiver"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/portForSource"
                style="@style/textViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/startRemoteReceiver" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/sourcePort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/portForSource">

                <org.rocstreaming.rocdroid.component.CopyBlock
                    android:id="@+id/sourcePortValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/portForRepair"
                style="@style/textViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/sourcePort" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/repairPort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                app:layout_constraintTop_toBottomOf="@+id/portForRepair">

                <org.rocstreaming.rocdroid.component.CopyBlock
                    android:id="@+id/repairPortValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/putIpAddress"
                style="@style/textViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sender_put_IP_address"
                app:layout_constraintTop_toBottomOf="@+id/repairPort" />

            <EditText
                android:id="@+id/receiverIp"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                android:autofillHints=""
                android:ems="10"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center_horizontal"
                android:hint="@string/receiver_ip"
                android:inputType="number|numberDecimal"
                android:digits="0123456789."
                android:minHeight="48dp"
                android:singleLine="true"
                android:text="@string/default_receiver_ip"
                android:textSize="@dimen/font_big"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/putIpAddress" />

            <TextView
                android:id="@+id/chooseCaptureSound"
                style="@style/textViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sender_choose_audio_source"
                app:layout_constraintTop_toBottomOf="@+id/receiverIp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/audio_source_dialog_button"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:background="@drawable/dropdown_button"
                android:orientation="horizontal"
                android:padding="5dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/chooseCaptureSound">

                <TextView
                    android:id="@+id/audio_source"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/font_medium"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/triangle" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/startSender"
                style="@style/textViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sender_start_sender"
                app:layout_constraintTop_toBottomOf="@+id/audio_source_dialog_button"
                tools:ignore="MissingConstraints" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/startSenderButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/padding"
        android:paddingTop="@dimen/padding"
        android:text="@string/start_sender"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>