<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ReceiverFragment">

    <ScrollView
        android:id="@+id/senderSettings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fadeScrollbars="false"
        android:paddingBottom="@dimen/padding"
        app:layout_constraintBottom_toTopOf="@+id/startReceiverButton"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/startRemoteSender"
                style="@style/textViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/receiver_start_remote_sender"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/useIP"
                style="@style/textViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/receiver_use_IP"
                app:layout_constraintTop_toBottomOf="@+id/startRemoteSender" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/IPAddressesWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/useIP">

                <LinearLayout
                    android:id="@+id/IPAddresses"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:divider="@drawable/divider"
                    android:orientation="vertical"
                    android:showDividers="middle"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/portForSource"
                style="@style/textViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/IPAddressesWrapper" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/sourcePort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/portForSource">

                <org.rocstreaming.rocdroid.component.CopyBlock
                    android:id="@+id/sourcePortValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/portForRepair"
                style="@style/textViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/sourcePort" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/repairPort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/portForRepair">

                <org.rocstreaming.rocdroid.component.CopyBlock
                    android:id="@+id/repairPortValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/staertReceiver"
                style="@style/textViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/receiver_start_receiver"
                app:layout_constraintTop_toBottomOf="@+id/repairPort" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/startReceiverButton"
        style="@style/roundButton"
        android:layout_width="200dp"
        android:text="@string/start_receiver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>